--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="es">
 <head>
@@ -130,6 +131,14 @@
     <a href="mapachito2.jpg" target="_blank">
         <img src="mapachito2.jpg" alt="Mapachito Aventura 2" class="comic-img">
     </a>
+<a href="mapachito2.jpg" target="_blank">
+        <img src="mapachito2.jpg" alt="Mapachito Aventura 3" class="comic-img">
+<a href="mapachito2.jpg" target="_blank">
+        <img src="mapachito2.jpg" alt="Mapachito Aventura 4" class="comic-img">
+    </a>
+
+    </a>
+
 </div>    </section>
 
     <section id="sobremi">
